codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__visual_review__approval_ansi16_120x36.snap
---
source: tui/src/chatwidget/tests/visual_review.rs
expression: normalize_snapshot_paths(text)
---






















› Review the retry logic, fix the missing error handling, and verify the patch.



  Approve this command?

  Reason: Run the focused client tests to verify the retry fix.

  $ just test -p atlas-client

› 1. Allow this command (y)             Runs this action once.
  2. Tell Codex what to do instead (esc)  Stops this request and returns to Codex.

  enter select · esc cancel
