codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__visual_review__conversation_light_120x36.snap
---
source: tui/src/chatwidget/tests/visual_review.rs
expression: normalize_snapshot_paths(text)
---















› Review the retry logic, fix the missing error handling, and verify the patch.

• Ran 1 command
  └ just test -p atlas-client
    4 passed; 0 failed


• ## Retry handling fixed

  The timeout path now records the original error before returning the cached response.

  - Added a regression case for the timeout branch.
  - Preserved the existing backoff and cache behavior.
  - Verification: 4 focused tests passed.

  The patch is ready for your review.

╭ Message ───────────────────────────────────────────────────────────────────────────────────────────────── enter send ╮
│ › Ask Codex to do anything                                                                                           │
╰ / commands · @ files ────────────────────────────────────────────────────────────────────────────── ctrl + j newline ╯
  GPT 5.6 Sol · Default reasoning · C:\work\atlas
